[tool.poetry]
name = "russian_datcha_club"
version = "0.1.0"
description = ""
authors = ["Colin Goutte <cgte@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.3"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
